orden y código limpio
Añadir gestión de citas y registro de clientes, veterinarios y mascotas; implementar cálculo de costos y mejorar la presentación de información.